--- a/LZ Tienda/LZ Tienda/Base.lproj/LaunchScreen.storyboard
+++ b/LZ Tienda/LZ Tienda/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -27,13 +26,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cervezas" translatesAutoresizingMaskIntoConstraints="NO" id="MAN-Cu-9ne">
-                                <rect key="frame" x="87" y="207" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BtZECFUCYAAUdhp" translatesAutoresizingMaskIntoConstraints="NO" id="MAN-Cu-9ne">
+                                <rect key="frame" x="87" y="226" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="4bz-Jl-FpW"/>
+                                    <constraint firstAttribute="width" constant="240" id="Rc6-tt-1Mg"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.69824343039336045" green="0.91928647744535197" blue="0.91458996480573784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="MAN-Cu-9ne" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="Ibf-V2-kCx"/>
+                            <constraint firstItem="MAN-Cu-9ne" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="182" id="dLQ-2d-Tyz"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -42,9 +48,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cervezas" width="600" height="600"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="BtZECFUCYAAUdhp" width="506" height="242"/>
     </resources>
 </document>
